Prevent vertical scrollbar during overflow auto

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,7 +52,8 @@ a:hover {
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
     padding-right: 5px;
-    overflow:auto;
+    overflow-x:auto;
+    overflow-y:hidden;
 }
 
 #show-results {
@@ -66,7 +67,8 @@ a:hover {
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     padding-right: 5px;
-    overflow:auto;
+    overflow-x:auto;
+    overflow-y:hidden;
 }
 
 .buttons {
@@ -205,4 +207,9 @@ a:hover {
     #calculator-case {
         width: 300px;
     };
+/* 
+    .display-values,
+    #show-results {
+        overflow:auto;
+    } */
 };
